# wmainfo-py

./: .gitignore  README  README.md  example.py  pyproject.toml  test_wmainfo.py  wmainfo.py  wmainfo.pyi
